`Response`-related classes refactoring (#38784)
* Removed unnecessary test dependencies from module-info.java and refactored shared test classes. (#38447)

* Removed unnecessary test dependencies from module-info.java and refactored shared test classes.

* Fixed build issues.

* Made HttpResponse<T> implement Response<T>.

* Made HttpResponse parameterized.

* Made HttpDecodedResponse parameterized. This might not be necessary.

* De-parameterize HttpDecodedResponse and fixed unit tests.

* Fixed CheckStyle error.

* De-parameterized HttpResponse and children classes.

* Merged `OkHttpBufferedResponse` and `OkHttpResponse` into one class and got rid of the abstract `OkHttpResponseBase`.

* Fixed compilation issue.

* Made `HttpResponse` concrete instead of abstract and removed `DefaultHttpClientResponse` in favor of using the former in `DefaultHttpClient`.

* Polished comments and Javadoc in RestProxy-related classes and SwaggerMethodParser. Removed unused imports.

* Made `HttpResponse` parameterized, added `getDecodedeBody()` to it like in  `HttpResponseDecoder.HttpDecodedResponse`, and removed the latter response type.

* Modified HttpResponse to use a deserialization callback instead of instances of `ObjectSerializer` and the internal `HttpResponseDecodeData`. Removed `HttpResponseDecoder`.

* Made `deserializationCallback` a member of `HttpRequest` instead of `HttpResponse`.

* Added a way to set the deserialization callback on `RequestOptions`.

* Made `Response` extend from `Closeable` and replaced most uses of `HttpResponse` with `Response`.

* Made `HttpResponse` an implementation detail.

* Removed exports statement for the now internal `HttpResponse` from `module-info.java`. Packages like generic-core-http-okhttp` don't need it anymore.

* Applied PR feedback and fixed typo.

* Removed `Response.createRawResponse()`.

* Removed unnecessary throws statement in `RetryPolicy`.

* Removed unnecessary full name qualifiers for Generic Core types in OkHttp class